Fixed issues when not using Google dark mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,14 @@ body {
   margin:0;
   height: 100vh;
   padding:0;
+  color: white;
+  background-image: url("assets/background.gif");
+  min-height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
 }
 
 ul {
@@ -40,10 +48,15 @@ background-color: #04AA6D;
 .title {
   font-size: 75px;
   margin: 0px;
+  color: white;
 }
 
 .header {
   background-image: url("assets/background.gif");
+  min-height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
   background-size: cover;
   height: 100vh;
 }
@@ -84,7 +97,7 @@ background-color: #04AA6D;
   background-color: rgb(0, 0, 0);
   transition-duration: 0.4s;
   font-size: 40px;
-  color: black; 
+  color: white; 
   border: 2px solid rgb(0, 0, 0);
 }
 .homebutton:hover {
@@ -93,10 +106,7 @@ background-color: #04AA6D;
 
 .projects {
   background-color: black;
-  position: absolute;
-  top: 53%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 75%
 }
 .project {
   margin: 5px 100px;
@@ -108,7 +118,7 @@ background-color: #04AA6D;
   background-color: rgb(32, 32, 32);
   transition-duration: 0.4s;
   font-size: 25px;
-  color: black; 
+  color: white; 
   border: 2px solid rgb(0, 0, 0);
 }
 .projectbutton:hover {
